# web_assistant

./: .gitignore  CMakeLists.txt  server.cpp
lib/logger/includes/: filelogger.h
modules/: ComPort.cpp  PortLst.cpp  settings.cpp
sketch/: sketch_1.0.ino
www/: index.html  script.js  style.css
